few fixes on dates

--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -73,7 +73,7 @@
 
 
 			<div class="chart">
-				<div class="viz-title"><span>Affluences par
+				<div class="viz-title"><span>Affluences des visites par
 					</span>
 					<select onchange="refresh_viz1_affluences()" id="type_affluence">
 					  <option value="h">heure</option>
