votes next steps

--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -10,6 +10,8 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	  <link rel="shortcut icon" href="/assets/images/logo-128x125.png" type="image/x-icon">
 	  <meta name="description" content="Bienvenue sur les statistiques du site !">
+
+
 	<title>DATAVIZ jadynekena.com</title>
 
 		
@@ -19,7 +21,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.3/echarts.min.js"></script>
 
 
-
+	<link rel="stylesheet" href="/assets/mobirise/css/mbr-additional.css">
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -83,8 +85,22 @@
 				<div class="chart-element affluence"></div>
 			</div>
 		</div>
-
 	</div>
+
+
+	<fieldset class="next-steps">
+	  <legend><h3>Je vous laisse choisir la fonctionnalité à mettre pour lundi prochain !</h3></legend>
+	  <div class="poll" action="#">
+	    <div><input type="radio" name="next-steps" value="choice1" id="choice1"><label for="choice1">Rajouter un filtre Pays</label></div>
+	    <div><input type="radio" name="next-steps" value="choice2" id="choice2"><label for="choice2">Autoriser le téléchargement</label></div>
+	    <div><input type="radio" name="next-steps" value="choice3" id="choice3"><label for="choice3">Dévoiler les éléments les plus cliqués</label></div>	    
+	    <div><input type="radio" name="next-steps" value="choice4" id="choice4"><label for="choice4">Référencer d'autres projets</label></div>
+
+
+	    <div><button id="sendVote" class="btn btn-primary display-4" onclick="submit_choice()">Soumettre mon vote</button></div>
+	    <div class="remark"></div>
+	  </div>
+	</fieldset>
 
 
 	<script type="text/javascript" src="/assets/js/common-elements.js"></script>
