--- a/index.html
+++ b/index.html
@@ -396,6 +396,23 @@
                     <div class="a-dataviz">
                         <iframe src="/DATAVIZ/"></iframe>
                     </div>
+
+
+                    <fieldset class="next-steps">
+                      <legend><h3>Je vous laisse choisir la fonctionnalité à mettre pour lundi prochain !</h3></legend>
+                      <div class="poll">
+                        <div><input type="radio" name="next-steps" value="choice1" id="choice1"><label for="choice1">Rajouter un filtre Pays</label></div>
+                        <div><input type="radio" name="next-steps" value="choice2" id="choice2"><label for="choice2">Autoriser le téléchargement</label></div>
+                        <div><input type="radio" name="next-steps" value="choice3" id="choice3"><label for="choice3">Dévoiler les éléments les plus cliqués</label></div>       
+                        <div><input type="radio" name="next-steps" value="choice4" id="choice4"><label for="choice4">Référencer d'autres projets</label></div>
+
+
+                        <div><button id="sendVote" class="btn btn-primary display-4" onclick="submit_choice()">Soumettre mon vote</button></div>
+                        <div class="remark"></div>
+                      </div>
+                    </fieldset>
+
+
                 </div>
 
                 <!--
