on iframe ready

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 </h5>
                 <div class="align-center">
                     <div class="a-dataviz">
-                        <iframe src="/DATAVIZ/"></iframe>
+                        <iframe id="DATAVIZ" src="/DATAVIZ/"></iframe>
                     </div>
 
 
