--- a/index.html
+++ b/index.html
@@ -398,13 +398,13 @@
                     </div>
 
 
-                    <fieldset class="next-steps">
+                    <fieldset id="poll-votes" class="next-steps">
                       <legend><h3>Je vous laisse choisir la fonctionnalité à mettre pour lundi prochain !</h3></legend>
                       <div class="poll">
-                        <div><input type="radio" name="next-steps" value="choice1" id="choice1"><label for="choice1">Rajouter un filtre Pays</label></div>
-                        <div><input type="radio" name="next-steps" value="choice2" id="choice2"><label for="choice2">Autoriser le téléchargement</label></div>
-                        <div><input type="radio" name="next-steps" value="choice3" id="choice3"><label for="choice3">Dévoiler les éléments les plus cliqués</label></div>       
-                        <div><input type="radio" name="next-steps" value="choice4" id="choice4"><label for="choice4">Référencer d'autres projets</label></div>
+                        <div><input type="radio" name="next-steps" value="choice1" id="choice1"><label for="choice1">Rajouter un filtre Pays</label><span class="nb_votes"></span></div>
+                        <div><input type="radio" name="next-steps" value="choice2" id="choice2"><label for="choice2">Autoriser le téléchargement</label><span class="nb_votes"></span></div>
+                        <div><input type="radio" name="next-steps" value="choice3" id="choice3"><label for="choice3">Dévoiler les éléments les plus cliqués</label><span class="nb_votes"></span></div>       
+                        <div><input type="radio" name="next-steps" value="choice4" id="choice4"><label for="choice4">Référencer d'autres projets</label><span class="nb_votes"></span></div>
 
 
                         <div><button id="sendVote" class="btn btn-primary display-4" onclick="submit_choice()">Soumettre mon vote</button></div>
@@ -445,7 +445,7 @@
             <div class="title col-md-12 col-lg-8">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
                     <strong>PROJETS ACCOMPLIS</strong></h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Pour des raisons de confidentialité, cette rubrique regroupe uniquement des <strong>projets personnels</strong> menés par simple passion d'analyses de données brutes. Vous pouvez toutefois connaître <a href="/#mes-clients" class="text-primary">les entreprises qui m'ont déjà fait confiance</a>.<br><br>Si vous avez un projet d'analyse de données ouvertes, n'hésitez à <a href="/#contact" class="text-primary">me contacter</a>&nbsp;!</h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Pour des raisons de confidentialité, cette rubrique regroupe uniquement des <strong>projets personnels</strong> menés par simple passion d'analyses de données brutes. Vous pouvez toutefois connaître <a href="/#mes-clients" class="text-primary">les entreprises qui m'ont déjà fait confiance</a>.<br><br>Si vous avez un projet d'analyse de données, n'hésitez à <a href="/#contact" class="text-primary">me contacter</a>&nbsp;!</h4>
                 <div class="mbr-section-btn align-center">
                     <a class="btn btn-primary display-4" href="/projets-donnees-ouvertes">Données ouvertes</a>
                     <a class="btn btn-primary display-4" href="/projets-donnees-personnelles">Données personnelles</a>
