--- a/index.html
+++ b/index.html
@@ -349,7 +349,17 @@
                     <strong>TECHNOLOGIES MAÎTRISÉES</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">
                     Retrouvez ci-dessous la liste des technos utilisées dans les projets que je mène :</h4>
-                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" >VBA</a> <a class="btn btn-secondary display-4" >SQL</a> <a class="btn btn-secondary display-4" >EXCEL</a> <a class="btn btn-secondary display-4" >GOOGLE SCRIPT</a> <a class="btn btn-secondary display-4" >TABLEAU SOFTWARE</a> <a class="btn btn-secondary display-4" >MS ACCESS</a> <a class="btn btn-secondary display-4" >HTML/CSS/JavaScript</a> <a class="btn btn-secondary display-4" >GIT</a><a class="btn btn-secondary display-4" >MARKDOWN</a></div>
+                <div class="mbr-section-btn align-center">
+                    <a class="btn btn-secondary display-4" >VBA</a>
+                    <a class="btn btn-secondary display-4" >SQL</a>
+                    <a class="btn btn-secondary display-4" >EXCEL</a>
+                    <a class="btn btn-secondary display-4" >GOOGLE SCRIPT</a>
+                    <a class="btn btn-secondary display-4" >TABLEAU SOFTWARE</a>
+                    <a class="btn btn-secondary display-4" >MS ACCESS</a>
+                    <a class="btn btn-secondary display-4" >HTML/CSS/JavaScript</a>
+                    <a class="btn btn-secondary display-4" >GIT</a>
+                    <a class="btn btn-secondary display-4" >MARKDOWN</a>
+                </div>
             </div>
         </div>
     </div>
@@ -374,7 +384,14 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" >JAVA</a> <a class="btn btn-white display-4" >PYTHON</a> <a class="btn btn-white display-4" >C</a> <a class="btn btn-white display-4" >BASH</a> <a class="btn btn-white display-4" >POWERSHELL</a><a class="btn btn-white display-4" >RETOOL</a></div>
+                <div class="mbr-section-btn align-center">
+                    <a class="btn btn-white display-4" >JAVA</a>
+                    <a class="btn btn-white display-4" >PYTHON</a>
+                    <a class="btn btn-white display-4" >C</a>
+                    <a class="btn btn-white display-4" >BASH</a>
+                    <a class="btn btn-white display-4" >POWERSHELL</a>
+                    <a class="btn btn-white display-4" >MATLAB</a>
+                </div>
             </div>
         </div>
     </div>
