votes de la semaine

--- a/index.html
+++ b/index.html
@@ -414,17 +414,17 @@
                         <iframe id="DATAVIZ" src="/DATAVIZ/"></iframe>
                     </div>
 
+                    <section class="content4 cid-t98cXIKQvC" id="poll-votes" >
+                        <fieldset class="next-steps">
+                          <legend><h3>Je vous laisse choisir la fonctionnalité à mettre pour lundi prochain !</h3></legend>
+                          <div class="poll">
+                            <div><input type="radio" name="next-steps" value="choice1" id="choice1"><label for="choice1">Rajouter un filtre Pays</label><span class="nb_votes"></span></div>
+                            <div><input type="radio" name="next-steps" value="choice2" id="choice2"><label for="choice2">Autoriser le téléchargement</label><span class="nb_votes"></span></div>
+                            <div><input type="radio" name="next-steps" value="choice3" id="choice3"><label for="choice3">Dévoiler les éléments les plus cliqués</label><span class="nb_votes"></span></div>       
+                            <div><input type="radio" name="next-steps" value="choice4" id="choice4"><label for="choice4">Référencer d'autres projets</label><span class="nb_votes"></span></div>
+                    </div>
 
-                    <fieldset id="poll-votes" class="next-steps">
-                      <legend><h3>Je vous laisse choisir la fonctionnalité à mettre pour lundi prochain !</h3></legend>
-                      <div class="poll">
-                        <div><input type="radio" name="next-steps" value="choice1" id="choice1"><label for="choice1">Rajouter un filtre Pays</label><span class="nb_votes"></span></div>
-                        <div><input type="radio" name="next-steps" value="choice2" id="choice2"><label for="choice2">Autoriser le téléchargement</label><span class="nb_votes"></span></div>
-                        <div><input type="radio" name="next-steps" value="choice3" id="choice3"><label for="choice3">Dévoiler les éléments les plus cliqués</label><span class="nb_votes"></span></div>       
-                        <div><input type="radio" name="next-steps" value="choice4" id="choice4"><label for="choice4">Référencer d'autres projets</label><span class="nb_votes"></span></div>
-
-
-                        <div><button id="sendVote" class="btn btn-primary display-4" onclick="submit_choice()">Soumettre mon vote</button></div>
+                        <div class="align-center"><button id="sendVote" class="btn btn-primary display-4" onclick="submit_choice()">Soumettre mon vote</button></div>
                         <div class="remark"></div>
                       </div>
                     </fieldset>
