--- a/index.html
+++ b/index.html
@@ -422,12 +422,13 @@
                             <div><input type="radio" name="next-steps" value="choice2" id="choice2"><label for="choice2">Autoriser le téléchargement</label><span class="nb_votes"></span></div>
                             <div><input type="radio" name="next-steps" value="choice3" id="choice3"><label for="choice3">Dévoiler les éléments les plus cliqués</label><span class="nb_votes"></span></div>       
                             <div><input type="radio" name="next-steps" value="choice4" id="choice4"><label for="choice4">Référencer d'autres projets</label><span class="nb_votes"></span></div>
-                    </div>
+                            </div>
 
-                        <div class="align-center"><button id="sendVote" class="btn btn-primary display-4" onclick="submit_choice()">Soumettre mon vote</button></div>
-                        <div class="remark"></div>
-                      </div>
-                    </fieldset>
+                            <div class="align-center"><button id="sendVote" class="btn btn-primary display-4" onclick="submit_choice()">Soumettre mon vote</button></div>
+                            <div class="remark"></div>
+                          </div>
+                        </fieldset>
+                    </section>
 
 
                 </div>
