--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -51,6 +51,10 @@
 					<div class="viz-title"><span>IP revenus</span></div>
 					<div class="viz-text"></div>
 				</div>
+				<div class="viz-label">
+					<div class="viz-title"><span>% IP revenus</span></div>
+					<div class="viz-text"></div>
+				</div>
 			</div>
 
 
