--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="/assets/mobirise/css/mbr-additional.css">
 	<link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="night">
 	<div class="themeViz"></div>
 	<span class="current_tooltip"></span>
 
@@ -105,6 +105,7 @@
 
 	<script type="text/javascript" src="/assets/js/common-elements.js"></script>
 	<script src="./utile.js"></script>
-
+	<div id="current_page"></div>
+</div>
 </body>
 </html>
