--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="/assets/mobirise/css/mbr-additional.css">
 	<link rel="stylesheet" href="./style.css">
 </head>
-<body class="night">
+<body>
 	<div class="themeViz"></div>
 	<span class="current_tooltip"></span>
 
