--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -25,6 +25,7 @@
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
+	<div style="display: none;" id="switch" class="fixed" onclick="switch_light()"><span  class="light-switch">💡</span></div>
 	<div class="themeViz"></div>
 	<span class="current_tooltip"></span>
 
