--- a/backup/index.html
+++ b/backup/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SUPABASE BACK UP</title>
+	<title>JADY NEKENA | Back Ups</title>
 	<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/json2csv/5.0.7/json2csv.umd.min.js"></script>
 	
@@ -31,6 +31,7 @@
 
 	<a id="results"></a>
 
+	<script type="text/javascript" src="/assets/js/common-elements.js"></script>
 	<script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
