--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="./assets/timeline/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700,400i,500i,600i,700i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700,400i,500i,600i,700i&display=swap">
+  </noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -39,6 +41,8 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5HJ4RVH"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <noscript><meta http-equiv="refresh" content="0; url=/no-script" /></noscript>
 
     <section data-bs-version="5.1" class="header18 cid-t97JNNZlWw mbr-fullscreen mbr-parallax-background" id="header18-1">
 
