--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -45,7 +45,7 @@
 					<div class="viz-text"></div>
 				</div>
 				<div class="viz-label">
-					<div class="viz-title"><span>Clics par visite (moyenne)</span></div>
+					<div class="viz-title"><span>Clics par visite</span></div>
 					<div class="viz-text"></div>
 				</div>
 				<div class="viz-label">
