no scroll iframe dataviz

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 </h5>
                 <div class="align-center">
                     <div class="a-dataviz">
-                        <iframe id="DATAVIZ" src="/DATAVIZ/"></iframe>
+                        <iframe id="DATAVIZ" src="/DATAVIZ/" scrolling="no"></iframe>
                     </div>
 
                     <section class="content4 cid-t98cXIKQvC" id="poll-votes" >
