--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -55,6 +55,14 @@
 					<div class="viz-title"><span>% IP revenus</span></div>
 					<div class="viz-text"></div>
 				</div>
+				<div class="viz-label">
+					<div class="viz-title"><span>Clics max visite</span></div>
+					<div class="viz-text"></div>
+				</div>
+				<div class="viz-label">
+					<div class="viz-title"><span>Durée max visite</span></div>
+					<div class="viz-text"></div>
+				</div>
 			</div>
 
 
