--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -33,35 +33,43 @@
 			<div  class="labels-container">
 				<div class="viz-label">
 					<div class="viz-title"><span>IP uniques</span></div>
-					<div class="viz-text"></div>
+					<span class="viz-text"></span>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title"><span>Visites uniques</span></div>
-					<div class="viz-text"></div>
+					<span class="viz-text"></span>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title"><span>Clics</span></div>
-					<div class="viz-text"></div>
+					<span class="viz-text"></span>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title"><span>Clics par visite</span></div>
-					<div class="viz-text"></div>
+					<span class="viz-text"></span>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title"><span>IP revenus</span></div>
-					<div class="viz-text"></div>
+					<span class="viz-text"></span>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title"><span>% IP revenus</span></div>
-					<div class="viz-text"></div>
+					<span class="viz-text"></span>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title"><span>Clics max visite</span></div>
-					<div class="viz-text"></div>
+					<span class="viz-text"></span>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title"><span>Durée max visite</span></div>
-					<div class="viz-text"></div>
+					<span class="viz-text"></span>
+				</div>
+				<div class="viz-label">
+					<div class="viz-title"><span>Site mis en ligne depuis</span></div>
+					<span class="viz-text"></span>
+				</div>
+				<div class="viz-label">
+					<div class="viz-title"><span>Première visite</span></div>
+					<span class="viz-text"></span>
 				</div>
 			</div>
 
