--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -65,11 +65,11 @@
 				</div>
 				<div class="viz-label">
 					<div class="viz-title"><span>Site mis en ligne depuis</span></div>
-					<span class="viz-text single-line fit-text"></span>
+					<span class="viz-text"></span>
 				</div>
 				<div class="viz-label">
 					<div class="viz-title"><span>Première visite</span></div>
-					<span class="viz-text single-line fit-text"></span>
+					<span class="viz-text"></span>
 				</div>
 			</div>
 
