clics avant visites

--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -78,8 +78,8 @@
 				<div class="viz-title"><span>Evolution nombre de 
 					</span>
 					<select onchange="refresh_viz1_counters(this)" id="type_evolution">
-					  <option value="visite">visites</option>
 					  <option value="clic">clics</option>
+					  <option value="visite">visites</option>
 					  <option value="adresse_ip">IP</option>
 					</select>
 				</div>		
@@ -100,8 +100,8 @@
 				<div class="viz-title">
 					<span>Affluences des
 						<select onchange="refresh_viz1_counters(this)" id="type_evolution_affluences">
-						  <option value="visite">visites</option>
 						  <option value="clic">clics</option>
+						  <option value="visite">visites</option>
 						  <option value="adresse_ip">IP</option>
 						</select>
 					</span>
@@ -114,6 +114,13 @@
 				</div>			
 				<div class="chart-element affluence"></div>
 			</div>
+		</div>
+	</div>
+
+
+	<div class="grid-container conteneurDashboard">
+		
+		<div class="viz" id="viz3">
 		</div>
 	</div>
 
