--- a/index.html
+++ b/index.html
@@ -420,40 +420,30 @@
 
                     <section class="content4 cid-t98cXIKQvC" id="poll-votes" >
                         <fieldset class="next-steps">
-                          <legend><h3>Je vous laisse choisir la fonctionnalité à mettre pour lundi prochain !</h3></legend>
-                          <div class="poll">
-                            <div><input type="radio" name="next-steps" value="choice1" id="choice1"><label for="choice1">Rajouter un filtre Pays</label><span class="nb_votes"></span></div>
-                            <div><input type="radio" name="next-steps" value="choice2" id="choice2"><label for="choice2">Autoriser le téléchargement</label><span class="nb_votes"></span></div>
-                            <div><input type="radio" name="next-steps" value="choice3" id="choice3"><label for="choice3">Dévoiler les éléments les plus cliqués</label><span class="nb_votes"></span></div>       
-                            <div><input type="radio" name="next-steps" value="choice4" id="choice4"><label for="choice4">Référencer d'autres projets</label><span class="nb_votes"></span></div>
+                            <legend><h3>Je vous laisse choisir la fonctionnalité à mettre pour lundi prochain !</h3></legend>
+                            <div class="poll">
+                                <div><input type="radio" name="next-steps" value="choice1" id="choice1"><label for="choice1">Rajouter un filtre Pays</label><span class="nb_votes"></span></div>
+                                <div><input type="radio" name="next-steps" value="choice2" id="choice2"><label for="choice2">Référencer d'autres projets</label><span class="nb_votes"></span></div>
+                                <div><input type="radio" name="next-steps" value="choice3" id="choice3"><label for="choice3">Identifier les visites/clics/IP d'aujourd'hui</label><span class="nb_votes"></span></div>  
+                                <div><input type="radio" name="next-steps" value="choice4" id="choice4"><label for="choice4">Autoriser le téléchargement</label><span class="nb_votes"></span></div>
                             </div>
 
                             <div class="align-center"><button id="sendVote" class="btn btn-primary display-4" onclick="submit_choice()">Soumettre mon vote</button></div>
                             <div class="remark"></div>
-                          </div>
                         </fieldset>
                     </section>
-
-
                 </div>
-
-                <!--
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-6" style="padding: 15%;">
-                    Vous ne rêvez pas. Chaque donnée de traffic sur ce site web sera accessible en temps réel, et téléchargeable à votre guise.                    
-                    <div class="title col-md-12 col-lg-8" style="width: 100%;">
-                        <h5 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7 remark2">Ce projet est en cours de construction, le temps de collecter un minimum de données exploitables. Merci de votre patience !
-                        </h5>
-                    </div>
-                </h4>
-                -->
-
-
-            </section>
-
 
             </div>
         </div>
     </div>
+
+</section>
+
+
+</div>
+</div>
+</div>
 </section>
 
 
