--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 </h5>
                 <div class="align-center">
                     <div class="a-dataviz">
-                        <iframe id="DATAVIZ" src="/DATAVIZ/" scrolling="no"></iframe>
+                        <iframe id="DATAVIZ" src="/DATAVIZ/" scrolling="no" onload="apply_light_iframe()"></iframe>
                     </div>
 
                     <section class="content4 cid-t98cXIKQvC" id="poll-votes" >
