shrink on laptop

--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -131,7 +131,7 @@
 
 		<div class="viz" id="viz3">		
 
-			<div class="chart">
+			<div class="chart shrinked-chart">
 				<div class="viz-title">
 					<span>Sections consultées
 					</span>
@@ -139,7 +139,7 @@
 				<div class="chart-element"></div>
 			</div>		
 
-			<div class="chart">
+			<div class="chart shrinked-chart">
 				<div class="viz-title">
 					<span>Projets explorés
 					</span>
@@ -150,7 +150,7 @@
 
 
 		<div class="viz" id="viz4">	
-			<div class="chart">
+			<div class="chart shrinked-chart">
 				<div class="viz-title">
 					<span>Liens</span>
 						<select id="type_link" onchange="refresh_group2_links()">
@@ -160,7 +160,7 @@
 				</div>		
 				<div class="chart-element"></div>
 			</div>			
-			<div class="chart">
+			<div class="chart shrinked-chart">
 				<div class="viz-title">
 					<span>Technos
 					</span>
