en cours d'automatisation

--- a/backup/index.html
+++ b/backup/index.html
@@ -12,7 +12,7 @@
 	<h1>TABLES BACKUP</h1>
 
 	<div>
-		<input type="text" name="PROJECT_ID" id="PROJECT_ID" placeholder="SUPABASE PROJECT ID" value = "kxdokvtvscvjuwzgmvei" hidden> <!--kxdokvtvscvjuwzgmvei-->
+		<input type="text" name="PROJECT_ID" id="PROJECT_ID" placeholder="SUPABASE PROJECT ID" value = "kxdokvtvscvjuwzgmvei" hidden>
 		<input type="text" name="API_KEY" id="API_KEY"  placeholder="SUPABASE API KEY" value = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imt4ZG9rdnR2c2N2anV3emdtdmVpIiwicm9sZSI6ImFub24iLCJpYXQiOjE2NTU2MTk3MTQsImV4cCI6MTk3MTE5NTcxNH0.ViTcu3L79EkuvGvyDiSqwdpgJ0MQFbg8nL1vO0tTcDk" hidden>
 		<button onclick="try_connect()">CONNECT</button>
 		<span id="remark" class="remark nok"></span>
