public ip address shown

--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -179,7 +179,7 @@
 	<script type="text/javascript" src="/assets/js/common-elements.js"></script>
 	<script src="./common.js"></script>
 	<script src="./utile.js"></script>
-	<div id="current_page"></div>
+	<div id="current_page">Votre adresse IP publique : <span id="myip">2a01:cb14:49c:3a00:6521:5719:a41d:d660</span></div>
 </div>
 
 </body>
