--- a/DATAVIZ/index.html
+++ b/DATAVIZ/index.html
@@ -37,7 +37,7 @@
 			<option value="group1">Vision globale</option>
 			<option value="group2">Résumé des clics</option>
 		</select>
-		<span title="Actualiser" class="refresh" onclick="get_donnees_site()"></span>
+		<span title="Actualiser" class="refresh" id="refresh-btn" onclick="get_donnees_site()"></span>
 		<span class="last-update"><br/><span id="last-update"></span></span>
 	</div>
 	<span class="current_tooltip"></span>
